--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     }
   ],
   "require": {
-    "php": ">7.3",
+    "php": "^8.2",
+    "ext-fileinfo": "*",
     "ext-json": "*",
     "phpdocumentor/reflection-docblock": "^4.3|^5.0",
     "psr/http-client": "^1.0",
@@ -31,8 +32,7 @@
     "psr/http-message": "^1.0",
     "symfony/property-access": "^3.4|^4.3|^5.0|^6.0",
     "symfony/property-info": "^3.4|^4.3|^5.0|^6.0",
-    "symfony/serializer": "^3.4|^4.3|^5.0|^6.0",
-    "ext-fileinfo": "*"
+    "symfony/serializer": "^3.4|^4.3|^5.0|^6.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.13",
@@ -40,7 +40,6 @@
     "phpstan/phpstan": "^0.10.6|^0.12.20",
     "phpunit/phpunit": "^8.5",
     "povils/phpmnd": "^2.0",
-    "sebastian/phpcpd": "^5.0",
     "squizlabs/php_codesniffer": "^3.4"
   },
   "autoload": {
