--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,15 @@
         "php": "^8.2",
         "ext-fileinfo": "*",
         "ext-json": "*",
-        "phpdocumentor/reflection-docblock": "^5.0",
+        "phpdocumentor/type-resolver": "^2.0",
+        "phpstan/phpdoc-parser": "^2.3",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
         "psr/http-message": "^1.0",
-        "symfony/property-access": "^7.0",
-        "symfony/property-info": "^7.0",
-        "symfony/serializer": "^7.0"
+        "symfony/property-access": "^7.4",
+        "symfony/property-info": "^7.4",
+        "symfony/serializer": "^7.4",
+        "symfony/type-info": "^7.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
@@ -41,7 +43,6 @@
         "phpunit/phpunit": "^8.5",
         "povils/phpmnd": "^2.0",
         "rector/rector": "^2.0",
-        "rector/simple-php-doc-parser": "^10.0",
         "squizlabs/php_codesniffer": "^3.4"
     },
     "autoload": {
